# 2024QTC-

./: .gitignore  CMakeLists.txt  bomb.cpp  bomb.h  bullet.cpp  bullet.h  config.h  enemyplane.cpp  enemyplane.h  heroplane.cpp  heroplane.h  main.cpp  mainscene.cpp  mainscene.h  map.cpp  res.qrc  startwindow.cpp  startwindow.h
